kubernetes/llama-service/service-q3.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-server-q3
  namespace: llms
spec:
  type: ClusterIP
  selector:
    app: llama-server-q3
  ports:
    - name: http
      port: 8080
      targetPort: http
