kubernetes/llama-service/service-q38.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-server-q3-8
  namespace: llms
spec:
  type: ClusterIP
  selector:
    app: llama-server-q3-8
  ports:
    - name: http
      port: 8080
      targetPort: http
