kubernetes/llama-service/service-q6.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-server-q6
  namespace: llms
spec:
  type: ClusterIP
  selector:
    app: llama-server-q6
  ports:
    - name: http
      port: 8080
      targetPort: http
